samples/_failures_safe/1761593784_17dbfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ca6fc3d8.c: In function ‘main’:
./samples/SAFE/__tmp_ca6fc3d8.c:151:5: error: expected expression at end of input
  151 |     for (int i = 0; i <
      |     ^~~
./samples/SAFE/__tmp_ca6fc3d8.c:151:5: error: expected declaration or statement at end of input
